#307 rultor-widget tests fixed